--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -9,4 +9,10 @@
 <meta itemprop="description" name="description"
     content="{% if page.description %}{{ page.description | truncate: 160 }}{% else %}{{ site.description | truncate: 160  }}{% endif %}" />
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,400;0,700;1,400;1,700&family=Staatliches&display=swap" rel="stylesheet"> 
+
+<script defer data-domain="hrajemepro.radeksoft.cz" src="https://plausible.chamik.eu/js/plausible.js"></script>
+
 {% seo title=false %}
