--- a/src/_includes/zapas.html
+++ b/src/_includes/zapas.html
@@ -1,4 +1,4 @@
-<figure>
+<figure class="py-2">
     <h4 class="text-center !mb-1">{{ include.ti }}. kolo - {{ include.tim }}</h4>
     <hr class="!my-0">
     <div class="flex flex-row justify-around">
