--- a/src/_includes/zapas.html
+++ b/src/_includes/zapas.html
@@ -1,7 +1,11 @@
 <figure class="py-2">
     <h4 class="text-center !mb-1">{{ include.ti }}. kolo - {{ include.tim }}</h4>
     <hr class="!my-0">
-    <div class="flex flex-row justify-around">
+    {% if include.NOW == nil %}
+        <div class="flex flex-row justify-around">
+    {% else %}
+        <div class="flex flex-row justify-around border-4 border-sky-600 bg-sky-100">
+    {% endif %}
         <div class="flex flex-col text-center">
             <p class="font-bold !mb-0">Hřiště 1</p>
             <p class="!mb-1">{{ include.a }}</p>
