Implement dark mode

--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -3,6 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="stylesheet" href="{{ "/styles/main.css" | relative_url }}">
+<link rel="stylesheet" href="{{ "/styles/dark.css" | relative_url }}">
 <link rel="shortcut icon" type="image/png" href={{ "/assets/favicon.ico" | relative_url }}>
 
 <title>{{ site.title }}{% if page.title %} | {{ page.title }}{% endif %}</title>
