--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -15,6 +15,31 @@
             <a href="/vysledky/" class="transition-all inline-block underline">
                 <p class="">výsledky</p>
             </a>
+            <p class="inline-block px-1">/</p>
+            <button id="darkmode-switcher">🌙</button>
         </nav>
     </div>
 </header>
+
+<script>
+    const button = document.getElementById("darkmode-switcher")
+    const stored = localStorage.getItem("darkmode");
+    let darkmode = stored === "dark" || (stored === null && window.matchMedia("(prefers-color-scheme: dark)").matches);
+    function toggleDarkMode() {
+        if (darkmode) {
+            document.documentElement.classList.remove("darkmode");
+            button.innerHTML = "🌙";
+            darkmode = false;
+            window.localStorage.setItem("darkmode", "light");
+        } else {
+            document.documentElement.classList.add("darkmode");
+            button.innerHTML = "🌞";
+            darkmode = true;
+            window.localStorage.setItem("darkmode", "dark");
+        }
+    }
+    // invert initial state and switch to sync everything
+    darkmode = !darkmode;
+    toggleDarkMode();
+    button.addEventListener("click", toggleDarkMode);
+</script>
